# SHAP-learning

./: pyproject.toml
Regression Case Study/: shap_regression.ipynb
Shap-Regression/: shap_regression.ipynb
Shap-introduction/: shap1.ipynb  shap_BG_data.ipynb
