[project]
name = "shap-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
